--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -69,6 +69,9 @@ PreferredLandscapeOrientation=LandscapeLeft
 TargetedHardwareClass=Desktop
 DefaultGraphicsPerformance=Maximum
 
+[/Script/NavigationSystem.RecastNavMesh]
+RuntimeGeneration=Dynamic
+
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
 DefaultTerminalVelocity=4000.000000
